--- a/notebooks/bert_embeddings_experiment_v3.ipynb
+++ b/notebooks/bert_embeddings_experiment_v3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trading Signal Generation"
+    "# Trading Signal Generation with KNN"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,138 +266,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistic Regression Classification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Combine January and February data for training\n",
-    "df_train_multi = pd.concat([df_jan, df_feb])\n",
-    "X_train_multi = np.vstack(df_train_multi['embedding'].values)\n",
-    "y_train_multi = df_train_multi['label']\n",
-    "\n",
-    "# multi classification and test on march\n",
-    "X_test_multi = np.vstack(df_march['embedding'].values)\n",
-    "y_test_multi = df_march['label']\n",
-    "\n",
-    "# binary Classification and test on march\n",
-    "df_train_binary = df_train_multi[df_train_multi['label'] != 0]\n",
-    "df_march_binary = df_march[df_march['label'] != 0]\n",
-    "\n",
-    "X_train_binary = np.vstack(df_train_binary['embedding'].values)\n",
-    "y_train_binary = df_train_binary['label']\n",
-    "\n",
-    "X_test_binary = np.vstack(df_march_binary['embedding'].values)\n",
-    "y_test_binary = df_march_binary['label']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "\n",
-    "# Train multi-class classifier\n",
-    "multi_clf = LogisticRegression(max_iter=1000)\n",
-    "multi_clf.fit(X_train_multi, y_train_multi)\n",
-    "\n",
-    "# Predict and evaluate\n",
-    "y_pred_multi = multi_clf.predict(X_test_multi)\n",
-    "print(\"Multi-Class Report:\\n\", classification_report(y_test_multi, y_pred_multi))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train binary classifier\n",
-    "binary_clf = LogisticRegression(max_iter=1000)\n",
-    "binary_clf.fit(X_train_binary, y_train_binary)\n",
-    "\n",
-    "# Predict and evaluate\n",
-    "y_pred_binary = binary_clf.predict(X_test_binary)\n",
-    "print(\"Binary Classification Report:\\n\", classification_report(y_test_binary, y_pred_binary))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "results_dir = \"results/bert_embeddings_experiment_v1/metrics\"\n",
-    "os.makedirs(results_dir, exist_ok=True)\n",
-    "\n",
-    "cm_multi = confusion_matrix(y_test_multi, y_pred_multi)\n",
-    "class_report = classification_report(y_test_multi, y_pred_multi, target_names=[\"-1\", \"0\", \"1\"])\n",
-    "\n",
-    "report_path = os.path.join(results_dir, \"classification_report_multi.txt\")\n",
-    "with open(report_path, \"w\") as f:\n",
-    "    f.write(\"Classification Report:\\n\")\n",
-    "    f.write(class_report)\n",
-    "\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "sns.heatmap(cm_multi, annot=True, fmt=\"d\", cmap=\"Blues\", \n",
-    "            xticklabels=[\"-1\", \"0\", \"1\"], yticklabels=[\"-1\", \"0\", \"1\"])\n",
-    "plt.xlabel(\"Predicted Labels\")\n",
-    "plt.ylabel(\"True Labels\")\n",
-    "plt.title(\"Multi-Class Confusion Matrix\")\n",
-    "\n",
-    "conf_matrix_path = os.path.join(results_dir, \"confusion_matrix_multi.png\")\n",
-    "plt.savefig(conf_matrix_path)\n",
-    "plt.close()\n",
-    "\n",
-    "print(f\"Classification report saved to: {report_path}\")\n",
-    "print(f\"Confusion matrix saved to: {conf_matrix_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cm_binary = confusion_matrix(y_test_binary, y_pred_binary)\n",
-    "class_report_binary = classification_report(y_test_binary, y_pred_binary, target_names=[\"-1\", \"1\"])\n",
-    "\n",
-    "report_path_binary = os.path.join(results_dir, \"classification_report_binary.txt\")\n",
-    "with open(report_path_binary, \"w\") as f:\n",
-    "    f.write(\"Classification Report (Binary):\\n\")\n",
-    "    f.write(class_report_binary)\n",
-    "\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "sns.heatmap(cm_binary, annot=True, fmt=\"d\", cmap=\"Greens\", \n",
-    "            xticklabels=[\"-1\", \"1\"], yticklabels=[\"-1\", \"1\"])\n",
-    "plt.xlabel(\"Predicted Labels\")\n",
-    "plt.ylabel(\"True Labels\")\n",
-    "plt.title(\"Binary Confusion Matrix\")\n",
-    "\n",
-    "conf_matrix_path_binary = os.path.join(results_dir, \"confusion_matrix_binary.png\")\n",
-    "plt.savefig(conf_matrix_path_binary)\n",
-    "plt.close()\n",
-    "\n",
-    "print(f\"Binary classification report saved to: {report_path_binary}\")\n",
-    "print(f\"Binary confusion matrix saved to: {conf_matrix_path_binary}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## KNN Classification"
    ]
   },
@@ -459,19 +327,6 @@
     "    plot_confusion_matrix(cm, labels=[-1, 0, 1], title=\"Confusion Matrix: Multi-class Classification\")\n",
     "\n",
     "df_train = pd.concat([df_jan, df_feb])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Binary Classification (KNN):\")\n",
-    "knn_binary_classification(df_train, df_march, k=5)\n",
-    "\n",
-    "print(\"\\nMulti-class Classification (KNN):\")\n",
-    "knn_multi_classification(df_train, df_march, k=5)"
    ]
   }
  ],
