--- a/notebooks/prompt_experiment_v1.ipynb
+++ b/notebooks/prompt_experiment_v1.ipynb
@@ -11,32 +11,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "- Prompting an LLM with a straightforward approach by providing the articles as training data and having it classify new headlines\n",
-    "- Note - I'd like to try an iterative approach - prompt it the confusion matrix at the end potentially, and then test on NEW data prbly?"
+    "import pandas as pd\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import logging\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file_path1 = \"data/processed/january/january.csv\"\n",
+    "with open(file_path1, \"r\", encoding=\"utf-8\") as file:\n",
+    "    df_jan = pd.read_csv(file)\n",
+    "\n",
+    "file_path2 = \"data/processed/february/february.csv\"\n",
+    "with open(file_path2, \"r\", encoding=\"utf-8\") as file:\n",
+    "    df_feb = pd.read_csv(file)\n",
+    "\n",
+    "file_path3 = \"data/processed/march/march.csv\"\n",
+    "with open(file_path3, \"r\", encoding=\"utf-8\") as file:\n",
+    "    df_march = pd.read_csv(file)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
