--- a/notebooks/bert_embeddings_experiment_v1.ipynb
+++ b/notebooks/bert_embeddings_experiment_v1.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\scaro\\Downloads\\fx-news-alpha\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Core Libraries\n",
     "import pandas as pd\n",
@@ -45,26 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path1 = \"data/processed/labeled_january_data.csv\"\n",
+    "file_path1 = \"data/raw/labeled_january.csv\"\n",
     "with open(file_path1, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_jan = pd.read_csv(file)\n",
     "\n",
-    "file_path2 = \"data/processed/labeled_february_data.csv\"\n",
+    "file_path2 = \"data/raw/labeled_february.csv\"\n",
     "with open(file_path2, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_feb = pd.read_csv(file)\n",
     "\n",
-    "file_path3 = \"data/processed/labeled_march_data.csv\"\n",
+    "file_path3 = \"data/raw/labeled_march.csv\"\n",
     "with open(file_path3, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_march = pd.read_csv(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
