--- a/notebooks/bert_embeddings_experiment_v3.ipynb
+++ b/notebooks/bert_embeddings_experiment_v3.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\scaro\\Downloads\\fx-news-alpha\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Core Libraries\n",
     "import pandas as pd\n",
@@ -54,22 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data/processed/labeled_january_data.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m file_path1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/processed/labeled_january_data.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_path1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      3\u001b[0m     df_jan \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(file)\n\u001b[0;32m      5\u001b[0m file_path2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/processed/labeled_february_data.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\scaro\\Downloads\\fx-news-alpha\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    303\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    304\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    305\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    306\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    307\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    308\u001b[0m     )\n\u001b[1;32m--> 310\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/processed/labeled_january_data.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_path1 = \"data/processed/labeled_january_data.csv\"\n",
     "with open(file_path1, \"r\", encoding=\"utf-8\") as file:\n",
@@ -85,123 +63,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
-    "def normalize_numbers(text):\n",
-    "    # Replace monetary values (e.g., \"R$ 15 bilhões\" → \"15B\")\n",
-    "    text = re.sub(r\"R\\$ ?([\\d.,]+) bilhões\", r\"\\1B\", text)\n",
-    "    text = re.sub(r\"R\\$ ?([\\d.,]+) milhões\", r\"\\1M\", text)\n",
-    "    # Standardize percentages (e.g., \"0.5 pp\" → \"0.5%\")\n",
-    "    text = re.sub(r\"([\\d.,]+) pp\", r\"\\1%\", text)\n",
-    "    # Standardize plain numbers (e.g., \"15,000\" → \"15000\")\n",
-    "    text = text.replace(\",\", \"\")\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_noise(text):\n",
-    "    # Remove dates and times\n",
-    "    text = re.sub(r\"\\b\\d{1,2}[hH]\\d{2}\\b\", \"\", text)  # Times like \"17h20\"\n",
-    "    text = re.sub(r\"\\b\\d{1,2}ª[Ff]\\b\", \"\", text)       # Ordinals like \"2ªF\"\n",
-    "    # Remove redundant words\n",
-    "    text = re.sub(r\"MAIS AGENDA|LÁ FORA|A BOLSA ESTÁ CARA\", \"\", text, flags=re.IGNORECASE)\n",
-    "    text = re.sub(r\"\\s+\", \" \", text).strip()\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Comprehensive dictionary for expanding acronyms\n",
-    "acronyms = {\n",
-    "    \"Selic\": \"Sistema Especial de Liquidação e de Custódia\",\n",
-    "    \"PIB\": \"Produto Interno Bruto\",\n",
-    "    \"CDI\": \"Certificado de Depósito Interbancário\",\n",
-    "    \"LPRs\": \"Loan Prime Rates\",\n",
-    "    \"Ibovespa\": \"Índice Bovespa\",\n",
-    "    \"BB\": \"Banco do Brasil\",\n",
-    "    \"BC\": \"Banco Central\",\n",
-    "    \"FGTS\": \"Fundo de Garantia do Tempo de Serviço\",\n",
-    "    \"STF\": \"Supremo Tribunal Federal\",\n",
-    "    \"CPI\": \"Índice de Preços ao Consumidor\",\n",
-    "    \"MP\": \"Medida Provisória\",\n",
-    "    \"EUA\": \"Estados Unidos\",\n",
-    "    \"ONU\": \"Organização das Nações Unidas\",\n",
-    "    \"FGV\": \"Fundação Getúlio Vargas\",\n",
-    "    \"IBGE\": \"Instituto Brasileiro de Geografia e Estatística\",\n",
-    "    \"BNDES\": \"Banco Nacional de Desenvolvimento Econômico e Social\",\n",
-    "    \"IPCA\": \"Índice Nacional de Preços ao Consumidor Amplo\",\n",
-    "    \"DI\": \"Depósito Interfinanceiro\",\n",
-    "    \"IR\": \"Imposto de Renda\",\n",
-    "    \"OI\": \"Operadora Oi\",\n",
-    "    \"CV\": \"Câmara de Vereadores\"\n",
-    "}\n",
-    "\n",
-    "noisy_acronyms = {\"ROMI\", \"ENEVA\", \"LIGHT\", \"DA\"}\n",
-    "\n",
-    "def expand_acronyms(text, acronym_dict):\n",
-    "    for acronym, full_form in acronym_dict.items():\n",
-    "        text = re.sub(rf'\\b{re.escape(acronym)}\\b', full_form, text, flags=re.IGNORECASE)\n",
-    "    return text\n",
-    "\n",
-    "def remove_noisy_acronyms(text, noisy_set):\n",
-    "    return re.sub(r'\\b(?:' + '|'.join(noisy_set) + r')\\b', '', text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import spacy\n",
-    "\n",
-    "# Load Portuguese spaCy model\n",
-    "nlp = spacy.load(\"pt_core_news_sm\")\n",
-    "\n",
-    "def lemmatize_text(text):\n",
-    "    doc = nlp(text)\n",
-    "    return \" \".join([token.lemma_ for token in doc if not token.is_stop and token.is_alpha])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocess_text(text):\n",
-    "    text = normalize_numbers(text)         \n",
-    "    text = expand_acronyms(text, acronyms)\n",
-    "    text = remove_noisy_acronyms(text, noisy_acronyms)\n",
-    "    text = lemmatize_text(text)          \n",
-    "    text = re.sub(r'\\s+', ' ', text).strip()\n",
-    "    text = text.lower()\n",
-    "    return text\n",
-    "\n",
-    "# Apply preprocessing to the dataset\n",
-    "df_jan['cleaned_article'] = df_jan['article'].apply(\n",
-    "    lambda x: pd.Series(preprocess_text(x))\n",
-    ")\n",
-    "df_feb['cleaned_article'] = df_feb['article'].apply(\n",
-    "    lambda x: pd.Series(preprocess_text(x))\n",
-    ")\n",
-    "df_march['cleaned_article'] = df_march['article'].apply(\n",
-    "    lambda x: pd.Series(preprocess_text(x))\n",
-    ")"
+    "## Data Visualization"
    ]
   },
   {
@@ -241,8 +106,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate Embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
