--- a/notebooks/sentiment_analysis_experiment_v1.ipynb
+++ b/notebooks/sentiment_analysis_experiment_v1.ipynb
@@ -61,14 +61,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = \"data/processed/labeled_january_data.csv\"\n",
+    "file_path1 = \"data/processed/labeled_january_data.csv\"\n",
+    "with open(file_path1, \"r\", encoding=\"utf-8\") as file:\n",
+    "    df_jan = pd.read_csv(file)\n",
     "\n",
-    "with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
-    "    df_jan = pd.read_csv(file)"
+    "file_path2 = \"data/processed/labeled_february_data.csv\"\n",
+    "with open(file_path2, \"r\", encoding=\"utf-8\") as file:\n",
+    "    df_feb = pd.read_csv(file)\n",
+    "\n",
+    "file_path3 = \"data/processed/labeled_march_data.csv\"\n",
+    "with open(file_path3, \"r\", encoding=\"utf-8\") as file:\n",
+    "    df_march = pd.read_csv(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from preprocessing import preprocess_text\n",
+    "\n",
+    "# Apply preprocessing to the dataset\n",
+    "df_jan['cleaned_article'] = df_jan['article'].apply(preprocess_text)\n",
+    "df_feb['cleaned_article'] = df_feb['article'].apply(preprocess_text)\n",
+    "df_march['cleaned_article'] = df_march['article'].apply(preprocess_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Visualization"
    ]
   },
   {
@@ -89,34 +117,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = \"data/processed/labeled_february_data.csv\"\n",
-    "\n",
-    "with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
-    "    df_feb = pd.read_csv(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sns.countplot(x='label', data=df_feb)\n",
     "plt.title('Label Distribution in February Dataset')\n",
     "plt.savefig(\"results/bert_embeddings_experiment_v1/figures/label_distribution_february.png\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path = \"data/processed/labeled_march_data.csv\"\n",
-    "\n",
-    "with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
-    "    df_march = pd.read_csv(file)"
    ]
   },
   {
@@ -129,128 +133,6 @@
     "plt.title('Label Distribution in March Dataset')\n",
     "plt.savefig(\"results/bert_embeddings_experiment_v1/figures/label_distribution_march.png\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "def normalize_numbers(text):\n",
-    "    # Replace monetary values (e.g., \"R$ 15 bilhões\" → \"15B\")\n",
-    "    text = re.sub(r\"R\\$ ?([\\d.,]+) bilhões\", r\"\\1B\", text)\n",
-    "    text = re.sub(r\"R\\$ ?([\\d.,]+) milhões\", r\"\\1M\", text)\n",
-    "    # Standardize percentages (e.g., \"0.5 pp\" → \"0.5%\")\n",
-    "    text = re.sub(r\"([\\d.,]+) pp\", r\"\\1%\", text)\n",
-    "    # Standardize plain numbers (e.g., \"15,000\" → \"15000\")\n",
-    "    text = text.replace(\",\", \"\")\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_noise(text):\n",
-    "    # Remove dates and times\n",
-    "    text = re.sub(r\"\\b\\d{1,2}[hH]\\d{2}\\b\", \"\", text)  # Times like \"17h20\"\n",
-    "    text = re.sub(r\"\\b\\d{1,2}ª[Ff]\\b\", \"\", text)       # Ordinals like \"2ªF\"\n",
-    "    # Remove redundant words\n",
-    "    text = re.sub(r\"MAIS AGENDA|LÁ FORA|A BOLSA ESTÁ CARA\", \"\", text, flags=re.IGNORECASE)\n",
-    "    text = re.sub(r\"\\s+\", \" \", text).strip()\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "# Comprehensive dictionary for expanding acronyms\n",
-    "acronyms = {\n",
-    "    \"Selic\": \"Sistema Especial de Liquidação e de Custódia\",\n",
-    "    \"PIB\": \"Produto Interno Bruto\",\n",
-    "    \"CDI\": \"Certificado de Depósito Interbancário\",\n",
-    "    \"LPRs\": \"Loan Prime Rates\",\n",
-    "    \"Ibovespa\": \"Índice Bovespa\",\n",
-    "    \"BB\": \"Banco do Brasil\",\n",
-    "    \"BC\": \"Banco Central\",\n",
-    "    \"FGTS\": \"Fundo de Garantia do Tempo de Serviço\",\n",
-    "    \"STF\": \"Supremo Tribunal Federal\",\n",
-    "    \"CPI\": \"Índice de Preços ao Consumidor\",\n",
-    "    \"MP\": \"Medida Provisória\",\n",
-    "    \"EUA\": \"Estados Unidos\",\n",
-    "    \"ONU\": \"Organização das Nações Unidas\",\n",
-    "    \"FGV\": \"Fundação Getúlio Vargas\",\n",
-    "    \"IBGE\": \"Instituto Brasileiro de Geografia e Estatística\",\n",
-    "    \"BNDES\": \"Banco Nacional de Desenvolvimento Econômico e Social\",\n",
-    "    \"IPCA\": \"Índice Nacional de Preços ao Consumidor Amplo\",\n",
-    "    \"DI\": \"Depósito Interfinanceiro\",\n",
-    "    \"IR\": \"Imposto de Renda\",\n",
-    "    \"OI\": \"Operadora Oi\",\n",
-    "    \"CV\": \"Câmara de Vereadores\"\n",
-    "}\n",
-    "\n",
-    "noisy_acronyms = {\"ROMI\", \"ENEVA\", \"LIGHT\", \"DA\"}\n",
-    "\n",
-    "def expand_acronyms(text, acronym_dict):\n",
-    "    for acronym, full_form in acronym_dict.items():\n",
-    "        text = re.sub(rf'\\b{re.escape(acronym)}\\b', full_form, text, flags=re.IGNORECASE)\n",
-    "    return text\n",
-    "\n",
-    "def remove_noisy_acronyms(text, noisy_set):\n",
-    "    return re.sub(r'\\b(?:' + '|'.join(noisy_set) + r')\\b', '', text)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import spacy\n",
-    "\n",
-    "# Load Portuguese spaCy model\n",
-    "nlp = spacy.load(\"pt_core_news_sm\")\n",
-    "\n",
-    "def lemmatize_text(text):\n",
-    "    doc = nlp(text)\n",
-    "    return \" \".join([token.lemma_ for token in doc if not token.is_stop and token.is_alpha])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocess_text(text):\n",
-    "    text = normalize_numbers(text)         \n",
-    "    text = expand_acronyms(text, acronyms)\n",
-    "    text = remove_noisy_acronyms(text, noisy_acronyms)\n",
-    "    text = lemmatize_text(text)          \n",
-    "    text = re.sub(r'\\s+', ' ', text).strip()\n",
-    "    text = text.lower()\n",
-    "    return text\n",
-    "\n",
-    "# Apply preprocessing to the dataset\n",
-    "df_jan['cleaned_article'] = df_jan['article'].apply(\n",
-    "    lambda x: pd.Series(preprocess_text(x))\n",
-    ")\n",
-    "df_feb['cleaned_article'] = df_feb['article'].apply(\n",
-    "    lambda x: pd.Series(preprocess_text(x))\n",
-    ")\n",
-    "df_march['cleaned_article'] = df_march['article'].apply(\n",
-    "    lambda x: pd.Series(preprocess_text(x))\n",
-    ")"
    ]
   },
   {
