--- a/notebooks/w2v_embeddings_experiment_v1.ipynb
+++ b/notebooks/w2v_embeddings_experiment_v1.ipynb
@@ -194,7 +194,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Applying the Word2Vec approach"
+    "## Applying the Word2Vec approach\n",
+    "- custom word2vec model implemented by me"
    ]
   },
   {
