WIP: save local changes before rebase

--- a/notebooks/bert_embeddings_experiment_v3.ipynb
+++ b/notebooks/bert_embeddings_experiment_v3.ipynb
@@ -99,6 +99,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply preprocessing to the dataset\n",
+    "df_jan['cleaned_article'] = df_jan['article'].apply(preprocess_text)\n",
+    "df_feb['cleaned_article'] = df_feb['article'].apply(preprocess_text)\n",
+    "df_march['cleaned_article'] = df_march['article'].apply(preprocess_text)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
