--- a/notebooks/bert_embeddings_experiment_v1.ipynb
+++ b/notebooks/bert_embeddings_experiment_v1.ipynb
@@ -83,16 +83,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path1 = \"data/raw/january/labeled_january.csv\"\n",
-    "with open(file_path1, \"r\", encoding=\"utf-8\") as file:\n",
+    "january = \"data/raw/BDM/january/january_labeled.csv\"\n",
+    "with open(january, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_jan = pd.read_csv(file)\n",
     "\n",
-    "file_path2 = \"data/raw/february/labeled_february.csv\"\n",
-    "with open(file_path2, \"r\", encoding=\"utf-8\") as file:\n",
+    "february = \"data/raw/BDM/february/february_labeled.csv\"\n",
+    "with open(february, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_feb = pd.read_csv(file)\n",
     "\n",
-    "file_path3 = \"data/raw/march/labeled_march.csv\"\n",
-    "with open(file_path3, \"r\", encoding=\"utf-8\") as file:\n",
+    "march = \"data/raw/BDM/march/march_labeled.csv\"\n",
+    "with open(march, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_march = pd.read_csv(file)"
    ]
   },
