--- a/notebooks/w2v_embeddings_experiment_v1.ipynb
+++ b/notebooks/w2v_embeddings_experiment_v1.ipynb
@@ -87,15 +87,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path1 = \"data/processed/labeled_january_data.csv\"\n",
+    "file_path1 = \"data/processed/january/january.csv\"\"\n",
     "with open(file_path1, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_jan = pd.read_csv(file)\n",
     "\n",
-    "file_path2 = \"data/processed/labeled_february_data.csv\"\n",
+    "file_path2 = \"data/processed/february/february.csv\"\n",
     "with open(file_path2, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_feb = pd.read_csv(file)\n",
     "\n",
-    "file_path3 = \"data/processed/labeled_march_data.csv\"\n",
+    "file_path3 = \"data/processed/march/march.csv\"\n",
     "with open(file_path3, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_march = pd.read_csv(file)"
    ]
