notebook clean-up

--- a/notebooks/tf-idf_experiment_v1.ipynb
+++ b/notebooks/tf-idf_experiment_v1.ipynb
@@ -97,19 +97,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path1 = \"data/processed/january/january.csv\"\n",
-    "with open(file_path1, \"r\", encoding=\"utf-8\") as file:\n",
+    "january = \"data/processed/bdm/2024-01.csv\"\n",
+    "with open(january, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_jan = pd.read_csv(file)\n",
     "\n",
-    "file_path2 = \"data/processed/february/february.csv\"\n",
-    "with open(file_path2, \"r\", encoding=\"utf-8\") as file:\n",
+    "february = \"data/processed/bdm/2024-02.csv\"\n",
+    "with open(february, \"r\", encoding=\"utf-8\") as file:\n",
     "    df_feb = pd.read_csv(file)\n",
     "\n",
-    "file_path3 = \"data/processed/march/march.csv\"\n",
-    "with open(file_path3, \"r\", encoding=\"utf-8\") as file:\n",
-    "    df_march = pd.read_csv(file)\n",
+    "march = \"data/processed/bdm/2024-03.csv\"\n",
+    "with open(march, \"r\", encoding=\"utf-8\") as file:\n",
+    "    df_march = pd.read_csv(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load spaCy Portuguese model once\n",
+    "nlp = spacy.load(\"pt_core_news_sm\")\n",
     "\n",
-    "df = pd.concat([df_jan, df_feb])"
+    "# Dictionary for acronym expansion\n",
+    "acronyms = {\n",
+    "    \"Selic\": \"Sistema Especial de Liquidação e de Custódia\",\n",
+    "    \"PIB\": \"Produto Interno Bruto\",\n",
+    "    \"CDI\": \"Certificado de Depósito Interbancário\",\n",
+    "    \"LPRs\": \"Loan Prime Rates\",\n",
+    "    \"Ibovespa\": \"Índice Bovespa\",\n",
+    "    \"BB\": \"Banco do Brasil\",\n",
+    "    \"BC\": \"Banco Central\",\n",
+    "    \"FGTS\": \"Fundo de Garantia do Tempo de Serviço\",\n",
+    "    \"STF\": \"Supremo Tribunal Federal\",\n",
+    "    \"CPI\": \"Índice de Preços ao Consumidor\",\n",
+    "    \"MP\": \"Medida Provisória\",\n",
+    "    \"EUA\": \"Estados Unidos\",\n",
+    "    \"ONU\": \"Organização das Nações Unidas\",\n",
+    "    \"FGV\": \"Fundação Getúlio Vargas\",\n",
+    "    \"IBGE\": \"Instituto Brasileiro de Geografia e Estatística\",\n",
+    "    \"BNDES\": \"Banco Nacional de Desenvolvimento Econômico e Social\",\n",
+    "    \"IPCA\": \"Índice Nacional de Preços ao Consumidor Amplo\",\n",
+    "    \"DI\": \"Depósito Interfinanceiro\",\n",
+    "    \"IR\": \"Imposto de Renda\",\n",
+    "    \"OI\": \"Operadora Oi\",\n",
+    "    \"CV\": \"Câmara de Vereadores\"\n",
+    "}\n",
+    "\n",
+    "# Noisy acronyms to remove\n",
+    "noisy_acronyms = {\"ROMI\", \"ENEVA\", \"LIGHT\", \"DA\"}\n",
+    "\n",
+    "def normalize_numbers(text):\n",
+    "    text = re.sub(r\"R\\$ ?([\\d.,]+) bilhões\", r\"\\1B\", text)\n",
+    "    text = re.sub(r\"R\\$ ?([\\d.,]+) milhões\", r\"\\1M\", text)\n",
+    "    text = re.sub(r\"([\\d.,]+) pp\", r\"\\1%\", text)\n",
+    "    text = text.replace(\",\", \"\")\n",
+    "    return text\n",
+    "\n",
+    "def expand_acronyms(text, acronym_dict):\n",
+    "    for acronym, full_form in acronym_dict.items():\n",
+    "        text = re.sub(rf'\\b{re.escape(acronym)}\\b', full_form, text, flags=re.IGNORECASE)\n",
+    "    return text\n",
+    "\n",
+    "def remove_noisy_acronyms(text, noisy_set):\n",
+    "    return re.sub(r'\\b(?:' + '|'.join(noisy_set) + r')\\b', '', text)\n",
+    "\n",
+    "def lemmatize_text(text):\n",
+    "    doc = nlp(text)\n",
+    "    return \" \".join([token.lemma_ for token in doc if not token.is_stop and token.is_alpha])\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    text = normalize_numbers(text)\n",
+    "    text = expand_acronyms(text, acronyms)\n",
+    "    text = remove_noisy_acronyms(text, noisy_acronyms)\n",
+    "    text = lemmatize_text(text)\n",
+    "    text = re.sub(r'\\s+', ' ', text).strip()\n",
+    "    return text.lower()"
    ]
   },
   {
