Restructure project into modular pipeline

--- a/notebooks/sentiment_analysis_experiment_v1.ipynb
+++ b/notebooks/sentiment_analysis_experiment_v1.ipynb
@@ -38,6 +38,7 @@
     "\n",
     "# -------------------- Visualization --------------------\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from tqdm.notebook import tqdm  # Jupyter-native progress bars"
    ]
   },
