--- a/notebooks/bert_embeddings_experiment_v2.ipynb
+++ b/notebooks/bert_embeddings_experiment_v2.ipynb
@@ -44,6 +44,7 @@
     "\n",
     "# -------------------- Visualization --------------------\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from tqdm.notebook import tqdm  # Jupyter-native progress bars"
    ]
   },
