chore(notebook): minor changes

--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6dc118b2",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
     "from dateutil import parser\n",
     "\n",
     "# Step 0: Load the dataset\n",
-    "df = pd.read_excel(\"../data/raw/allen-corpus.xlsx\")\n",
+    "df = pd.read_excel(\"../data/raw/bdm-corpus-2.xlsx\")\n",
     "\n",
     "# Step 1–3: Normalize individual DATE and TIME cells\n",
     "def parse_datetime_components(date_cell, time_cell):\n",
@@ -94,7 +94,7 @@
     "df = df[['Timestamp'] + [col for col in df.columns if col != 'Timestamp']]\n",
     "\n",
     "# Step 8: Save as CSV\n",
-    "df.to_csv(\"../data/processed/allen-corpus.csv\", index=False, encoding='utf-8-sig')\n",
+    "df.to_csv(\"../data/interim/bdm-corpus-2.csv\", index=False, encoding='utf-8-sig')\n",
     "\n",
     "# Step 9: Check for invalid rows (passed)\n",
     "invalid_rows = df[df['Timestamp'].isna()]\n",
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "THE ABOVE VERSIONS GO INTO INTERIM\n",
+    "THE ABOVE VERSIONS WENT INTO INTERIM\n",
     "\n",
     "Below we will process a universal dataset that contains both the Allen corpus and the USD/BRL exchange rate.\n",
     "This dataset can be used for any experiment, including the FINBERT baseline model.\n",
@@ -179,7 +179,17 @@
     "Step 2: Match exchange rates to each row in the Allen corpus by matching timestamps\n",
     "Step 3: Save the combined dataset as a new CSV file into data/processed as the universal dataset\n",
     "Step 4: Refactor the code to a reusable script that can be run from the command line\n",
-    "'''\n"
+    "'''\n",
+    "\n",
+    "# Step 1: Load interim data\n",
+    "bdm_df = pd.read_csv(\"../data/interim/bdm-corpus-2.csv\", parse_dates=['Timestamp'])\n",
+    "usd_brl_df = pd.read_csv(\"../data/processed/usd-brl.csv\", parse_dates=['Timestamp'])\n",
+    "\n",
+    "# Step 2: Merge datasets on Timestamp\n",
+    "merged_df = pd.merge(bdm_df, usd_brl_df, on='Timestamp', how='left', suffixes=('', '_USD_BRL'))\n",
+    "\n",
+    "# Step 3: Save the combined dataset\n",
+    "merged_df.to_csv(\"../data/processed/bdm-corpus-2.csv\", index=False, encoding='utf-8-sig')\n"
    ]
   },
   {
@@ -188,15 +198,7 @@
    "metadata": {},
    "source": [
     "# Experiment Design: FinBERT PT-BR for Directional Prediction\n",
-    "This experiment evaluates whether FinBERT-PT-BR sentiment outputs can predict short-term USD/BRL exchange rate movements. The process is as follows:\n",
-    "1. **Match exchange rates**: For each news timestamp in `allen-corpus.csv`, find the closest exchange rate at that time from `usd-brl.csv`.\n",
-    "2. **Future rate lookup**: For each timestamp, find the exchange rate exactly 2 hours later (t+120min).\n",
-    "3. **Label ground truth**: Assign a label: `1` if the rate increased, `-1` if it decreased. This is the ground truth for classification.\n",
-    "4. **FinBERT-PT-BR setup**: Use the HuggingFace model [lucas-leme/FinBERT-PT-BR](https://huggingface.co/lucas-leme/FinBERT-PT-BR) for sentiment classification. Only positive/negative (ignore neutral).\n",
-    "5. **Data preparation**: For each row, combine `HEADING` and `ARTICLE CONTENT` (if not NaN), drop `COMMENTS`.\n",
-    "6. **Run FinBERT-PT-BR**: Classify each text as positive/negative. Map positive→1, negative→-1.\n",
-    "7. **Store predictions**: Add sentiment predictions as a new column.\n",
-    "8. **Evaluation**: Compare predictions to ground truth. Compute and display a confusion matrix."
+    "h1a (Baseline Hypothesis): Sentiment outputs, mapped to direction, can predict short-term exchange rate movements."
    ]
   },
   {
